Bug 1822404 don't force image state for poster anonymous img r=emilio

so that the nsImageFrame can release a previous image and trigger reflow on
BROKEN state change when src is removed.

Differential Revision: https://phabricator.services.mozilla.com/D177360